# ti4-mapgen

./: .editorconfig  README.md  main.py  pyproject.toml  requirements.txt
scripts/: convert_faction_data.py  convert_map_data.py  convert_tile_data.py
tests/: test_hex.py  test_ti4_mapgen.py
ti4_mapgen/: app.py  board.py  config.py  database.py  faction.py  hex.py  schema.py  schemas.py  typing.py  util.py  views.py
ti4_mapgen/data/: faction_data.json  map_data.json  tile_data.json
ti4_mapgen/helpers/: convert_map_data.py  convert_tile_data.py
ti4_mapgen/models/: board.py  faction.py  hex.py  system.py  tile.py  typing.py
ti4_mapgen/scripts/: convert_map_data.py
ti4_mapgen/static/data/: tile_data.json
