[tool.poetry]
name = "ti4-mapgen"
version = "0.1.0"
description = ""
authors = ["solbero <njord.solberg@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^22.3.2"
dataclass-wizard = "^0.22.1"
ordered-enum = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
requests = "^2.27.1"
coverage = "^6.4.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config", "-ra"]
testpaths = "tests"
