[tool.poetry]
name = "ti4-mapgen"
version = "0.1.0"
description = ""
authors = ["solbero <njord.solberg@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
deta = { extras = ["async"], version = "1.1.0a2" }
python = "~3.9"
ordered-enum = "^0.0.6"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
pydantic = { extras = ["dotenv"], version = "^1.9.1" }
asyncstdlib = "^3.10.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
requests = "^2.27.1"
coverage = "^6.4.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config", "-ra"]
testpaths = "tests"
